--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: 📚 Documentation
-    url: https://github.com/5IA-Maserati/Bibliotech/wiki
+    url: https://github.com/5IA-Maserati/.github/wiki
     about: Check the documentation before submitting an issue.
